# MPILab9

./: CMakeLists.txt  README.md  main.cpp
